fix bug: 3554038 - legend bobbles when hovering on smaller charts. merge develop into d3.

--- a/ArgusWeb/app/css/main.css
+++ b/ArgusWeb/app/css/main.css
@@ -210,16 +210,16 @@ h5.bcDesc {margin-bottom:20px; font-weight:normal;}
 }
 
 /* chart styles */
-.chartTitle {margin-top:0; margin-bottom:0; text-align:center;}
+.chartTitle {margin-top:0; margin-bottom:.55em; text-align:center;}
 
 /* main elements */
-.chartContainer {margin:2em .5em 0 0; padding-top:1em; border:solid 2px #CCC; border-radius:5px; background:#FFF;}
+.chartContainer {margin:0 .5em .5em 0; padding-top:1em; border:solid 2px #CCC; border-radius:5px; background:#FFF;}
 .lineChartToolbar {margin-left:3em;}
 
 /** Toolbars */
 .topToolbar {padding:0 3.5em;}
 .topToolbar a {cursor:pointer;}
-.topToolbar .invisDiv {visibility:hidden; display:inline-block; width:1px; height:28px;}
+.topToolbar .toolbar {position:relative; height:30px;}
 
 .toolbarItem {display:inline-block;}
 
@@ -231,9 +231,9 @@ h5.bcDesc {margin-bottom:20px; font-weight:normal;}
 
 /* legend & other graph menus */
 .toolbarItem.legend {padding:5px 5px 5px 8px; height:28px;}
-.legend.floatPanel {overflow:hidden; width:99%;}
+.legend.floatPanel {display:none; overflow:hidden; width:95%;}
 .legend.floatPanel.open {
-  overflow:auto; position:absolute; padding-left:.5em; width:auto; height:300px; z-index:9;
+  display:block; overflow:auto; position:absolute; top:0; padding-left:.5em; width:auto; height:300px; z-index:9;
   border:solid 1px #CCC; border-radius:5px; background-color:#FFF; box-shadow:1px 1px 2px 0px #CCC;
 }
 
